tests/characterization/snapshots/characterization__operations__cloud_local_install.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local install <cloud|frontend|admin> [version|branch:<branch>]
  oqtopus cloud-local install all
--- stderr ---
--- end ---
