tests/characterization/snapshots/characterization__operations__cloud_local_uninstall.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local uninstall <cloud|frontend|admin> <version>
  oqtopus cloud-local uninstall <cloud|frontend|admin> branch:<branch>
--- stderr ---
--- end ---
