tests/characterization/snapshots/characterization__operations__cloud_local_unknown_option.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 1
--- stdout ---
--- stderr ---
Error: unknown install option: --offline
--- end ---
