tests/characterization/snapshots/characterization__operations__cloud_local_update.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local update <cloud|frontend|admin>
--- stderr ---
--- end ---
