tests/characterization/snapshots/characterization__operations__failed_sync_does_not_change_the_existing_binding.snap
---
source: tests/characterization/operations.rs
expression: context.normalize(&observation)
---
exit: 1
--- stdout ---
Installing manager v2.0.0
uv sync --frozen --no-dev --project <TEST_ROOT>/xdg-data/oqtopus/manager/releases/manager-v2.0.0
--- stderr ---
Error: failed to synchronize manager v2.0.0 with uv.
--- end ---
--- metadata ---
template=manager
install_root=<TEST_ROOT>/xdg-data/oqtopus/manager/releases
environment_name=characterization
environment_root=<TEST_ROOT>/work
created_at=2000-01-02T03:04:05Z
manager_version=v1.2.3
