tests/characterization/snapshots/characterization__operations__manager_branch_install_and_uninstall_update_binding.snap
---
source: tests/characterization/operations.rs
expression: context.normalize(&observation)
---
--- install ---
exit: 0
--- stdout ---
Downloading manager from branch 'main'
uv sync --frozen --no-dev --project <TEST_ROOT>/work/manager
Bound manager_version=branch:main
--- stderr ---
--- end ---
--- uninstall ---
exit: 0
--- stdout ---
Removed <TEST_ROOT>/work/manager
--- stderr ---
--- end ---
--- metadata ---
template=manager
install_root=<TEST_ROOT>/xdg-data/oqtopus/manager/releases
environment_name=characterization
environment_root=<TEST_ROOT>/work
created_at=2000-01-02T03:04:05Z
