tests/characterization/snapshots/characterization__operations__manager_empty_branch.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 1
--- stdout ---
--- stderr ---
Error: invalid branch version format: branch: (expected branch:<branch>)
--- end ---
