tests/characterization/snapshots/characterization__operations__manager_empty_version.snap
---
source: tests/characterization/operations.rs
expression: context.normalize(&context.render_output(&output))
---
exit: 0
--- stdout ---
Installing manager v2.0.0
uv sync --frozen --no-dev --project <TEST_ROOT>/xdg-data/oqtopus/manager/releases/manager-v2.0.0
Bound manager_version=v2.0.0
--- stderr ---
--- end ---
