tests/characterization/snapshots/characterization__operations__manager_install.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager install [version|branch:<branch>]
--- stderr ---
--- end ---
