tests/characterization/snapshots/characterization__operations__manager_uninstall.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager uninstall <version|branch:<branch>>
--- stderr ---
--- end ---
